2004-07-31  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-row.c (gantt_row_event): Move declaration to
	the top.

2004-07-30  Xavier Ordoquy  <xordoquy@linovia.com>

	* python/Makefile.am:
	We do need to include ../src headers and PLANNER FLAGS

	* python/planner-types.defs:
	* python/planner.defs:
	* python/planner.override:
	Added PlannerApplication and PlannerWindow to binding.

	* src/planner-python-plugin.c:
	Do more imports as bonobo is required for
	PlannerWindow.
	Replaced the project by window.

2004-07-30  Xavier Ordoquy  <xordoquy@linovia.com>

	* data/ui/Makefile.am:
	* data/ui/python-plugin.ui:
	* src/planner-python-plugin.c:
	The plugin now reads files in ~/.gnomeXX/planner/python

2004-07-30  Anders Carlsson  <andersca@gnome.org>

	* configure.in:
	* data/mime/Makefile.am:
	* data/planner.desktop.in:
	Support new mime activation specification.
	
2004-07-30  Richard Hult  <richard@imendio.com>

	* examples/Makefile.am:
	* examples/kitchen.planner: Add nice example from Kurt.

2004-07-30  Richard Hult  <richard@imendio.com>

	* src/planner-window.c: (get_last_dir): Remove trailing slash.

2004-07-30  Richard Hult  <richard@imendio.com>

	* configure.in:
	* data/ui/Makefile.am:
	* src/Makefile.am: Don't make resource usage view optional.

2004-07-30  Richard Hult  <richard@imendio.com>

	* configure.in: Update requirements.

	* libegg/recent-files: Sync with latest libegg.

	* libplanner/mrp-file-module.c: (mrp_file_module_load_all):
	* src/planner-plugin-loader.c: (mpl_load_dir):
	* src/planner-view-loader.c: (mvl_load_dir): Don't hardcode .so
	suffix.

	* src/Makefile.am: Split out shared code from task/gantt views.

2004-07-27  Richard Hult  <richard@imendio.com>

	* src/planner-task-dialog.c:
	(task_dialog_resource_units_cell_edited): Merge from 0.12 branch.

2004-07-19  Richard Hult  <richard@imendio.com>

	* configure.in: Bump.

2004-07-08  Anders Carlsson  <andersca@gnome.org>
